# didresolver

./: .gitignore  .gitmodules  .snyk  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md  README_v1.md  SECURITY.md  THIRD-PARTY-LICENSES.md  android-build.sh  build.rs  didresolver-0.0.2.spdx.json  didresolver-0.1.0.spdx.json  didresolver.spdx.json  generateBindings.sh  ios-build.sh  kotlin-android-build.sh  kotlin-build.sh  kotlind-android-build.sh  publiccode.yml  python-build.sh  swift-build.sh  uniffi-bindgen-swift.rs  uniffi.toml
.cargo/: config.toml
.github/workflows/: README.md  benchmarks.yml  build-and-test.yml  build-swift-bindings.yml  build_kotlin-android.yml  build_kotlin-windows.yml  build_kotlin.yml  build_swift.yml  clippy.yml  codeql-analyze.yml  osv-scanner.yml  rust-clippy.yml  snyk-scanner.yml
bindings/kotlin/uniffi/did/: did.kt
bindings/python/: did.py  libdidresolver.dylib
bindings/swift/didresolver.xcframework/ios-arm64-simulator/Headers/: did.swift
bindings/swift/didresolver.xcframework/ios-arm64/Headers/: didFFI.h
criterion/: README.md
criterion/did_tdw/TrustDidWeb_resolve/10/base/: benchmark.json  estimates.json
criterion/did_tdw/TrustDidWeb_resolve/10/new/: sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_resolve/10/report/: index.html
criterion/did_tdw/TrustDidWeb_resolve/100/base/: sample.json
criterion/did_tdw/TrustDidWeb_resolve/100/new/: benchmark.json  estimates.json  tukey.json
criterion/did_tdw/TrustDidWeb_resolve/100/report/: index.html
criterion/did_tdw/TrustDidWeb_resolve/200/new/: benchmark.json  estimates.json  sample.json  tukey.json
criterion/did_tdw/TrustDidWeb_resolve/200/report/: index.html
criterion/did_tdw/TrustDidWeb_resolve/300/base/: estimates.json  tukey.json
criterion/did_tdw/TrustDidWeb_resolve/300/new/: benchmark.json  sample.json
criterion/did_tdw/TrustDidWeb_resolve/report/: index.html
criterion/did_tdw/report/: index.html
criterion/did_webvh/WebVerifiableHistory_resolve/report/: index.html
criterion/did_webvh/report/: index.html
criterion/did_webvh_jsonschema/10/report/: index.html
criterion/did_webvh_jsonschema/100/report/: index.html
criterion/did_webvh_jsonschema/200/report/: index.html
criterion/did_webvh_jsonschema/300/report/: index.html
criterion/did_webvh_jsonschema/400/report/: index.html
criterion/did_webvh_jsonschema/5/report/: index.html
criterion/did_webvh_jsonschema/50/report/: index.html
criterion/did_webvh_jsonschema/DidLogEntryValidator_validate (parallel, using 12 of 12 core(s))/report/: index.html
criterion/did_webvh_jsonschema/DidLogEntryValidator_validate (sequential)/report/: index.html
criterion/did_webvh_jsonschema/report/: index.html
criterion/report/: index.html
did/: Cargo.toml  README.md  build.rs  uniffi-bindgen-swift.rs  uniffi.toml.tmpl
did/src/: did.rs  did.udl  lib.rs
did/test_data/tdw/: unordered_did.jsonl
did/tests/: README.md  test_generated_bindings.rs
did/tests/bindings/: test_did_sidekicks.kts  test_did_sidekicks_ed25519.kts  test_did_sidekicks_vc_data_integrity.kts  test_didresolver.kts
did_sidekicks/: CHANGELOG.md  Cargo.toml  README.md  build.rs  uniffi.toml  uniffi.toml.tmpl
did_sidekicks/src/: custom_jsonschema_keywords.rs  did_doc.rs  did_jsonschema.rs  did_method_parameters.rs  did_resolver.rs  did_sidekicks.udl  ed25519.rs  errors.rs  jcs_sha256_hasher.rs  lib.rs  multibase.rs  vc_data_integrity.rs
did_tdw/: CHANGELOG.md  Cargo.toml  README.md  build.rs  uniffi.toml  uniffi.toml.tmpl
did_tdw/benches/: did_tdw_benchmark.rs
did_tdw/src/: did_tdw.rs  did_tdw.udl  did_tdw_jsonschema.rs  did_tdw_method_parameters.rs  errors.rs  lib.rs
did_tdw/src/embed/jsonschema/: did_log_jsonschema_v_0_3.json  did_log_jsonschema_v_0_3_eid_conform.json
did_tdw/test_data/generated_by_didtoolbox_java/: README.md
did_tdw/test_data/generated_by_didtoolbox_java/legacy/: README.md  did-1.4.2.jsonl  did-1.5.0.jsonl  did-1.6.0.jsonl  did-1.7.0.jsonl  did-1.8.0.jsonl  did-1.9.0.jsonl  did-1.9.1.jsonl  did-2.0.0.jsonl
did_webvh/: CHANGELOG.md  Cargo.toml  README.md  build.rs  uniffi.toml  uniffi.toml.tmpl
did_webvh/benches/: did_webvh_benchmark.rs
did_webvh/src/: did_webvh.rs  did_webvh.udl  did_webvh_jsonschema.rs  did_webvh_method_parameters.rs  errors.rs  lib.rs
did_webvh/src/embed/jsonschema/: README.md  did_log_jsonschema_v_1_0.json  did_log_jsonschema_v_1_0_eid_conform.json
did_webvh/test_data/generated_by_didtoolbox_java/: README.md  did.jsonl  key_prerotation.jsonl  multiple_update_keys.jsonl  single_update_key.jsonl  v010_did.jsonl  v050_did.jsonl  v100_did.jsonl  v200_did.jsonl  v300_did.jsonl  v400_did.jsonl  v475_did.jsonl  v500_did.jsonl
did_webvh/test_data/generated_by_didtoolbox_java/legacy/: README.md  did-1.6.0.jsonl  did-1.7.0.jsonl  did-1.8.0.jsonl  did-1.9.0.jsonl  did-1.9.1.jsonl  did-2.0.0.jsonl
did_webvh/test_data/generated_by_didtoolbox_java/unhappy_path/: descending_version_datetime_did.jsonl  invalid_initial_version_number_did.jsonl  version_time_in_the_future_did.jsonl
did_webvh/test_data/generated_by_didwebvh_ts/: example.jsonl
did_webvh/test_data/manually_created/: 2_log_entries.jsonl  change_update_key_without_keyprerotation.jsonl  key_prerotation.jsonl  log_with_profile_version.jsonl  single_update_key.jsonl
did_webvh/test_data/manually_created/unhappy_path/: change_update_key_keep_using_old.jsonl  invalid_did_controller.jsonl  invalid_scid.jsonl  invalid_verificationmethod_controller.jsonl  portable.jsonl  signed_with_outdated_key.jsonl  signed_with_unauthorized_key.jsonl
did_webvh/test_data/third_party_test_vectors/: README.md  pre-1_0-spec.jsonl  revoked-did.jsonl
images/: README.md
src/: did.rs  did.udl  keys.rs  lib.rs  methods.rs
test_data/: did.jsonl  non_incremented_version_did.jsonl  scid_mismatch_did.jsonl  wrong_first_entry_did.jsonl
test_data/webvh/: did.jsonl  did_without_controller.jsonl  non_incremented_version_did.jsonl  unordered_did.jsonl
tests/: README.md  test_generated_bindings.rs
tests/bindings/: test_didresolver.kts
(+177 files in other folders)
