[package]
name = "didresolver"
version = "2.2.0"
edition = "2021"
description = "DID resolver for various did:tdw and did:webvh methods"
authors = ["Vladica Stojic", "Marcel Pfeuti", "Frithjof Hoppe", "Jonas Niestroj"]
homepage = "https://github.com/swiyu-admin-ch"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.16"
uniffi = { version = "0.29.4", features = ["cli"] }
strum = { version = "0.27.2", features = ["derive"] }
# CAUTION Starting with 2.2.0, didtoolbox (as dep) is replaced by: did_tdw, did_sidekicks and did_webvh
did_tdw = { git = "https://github.com/swiyu-admin-ch/did-tdw.git", tag = "1.0.0" }
#did_tdw = { path = "../did-tdw" }
did_sidekicks = { git = "https://github.com/swiyu-admin-ch/did-sidekicks.git", tag = "1.0.0" }
#did_sidekicks = { path = "../did-sidekicks" }
did_webvh = { git = "https://github.com/swiyu-admin-ch/did-webvh.git", tag = "1.0.0" }
#did_webvh = { path = "../did-webvh" }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.29.4", features = ["bindgen-tests"] }
rstest = "0.26.1"
ureq = "3.0.12"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "didresolver"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
ffi-trace = ["uniffi/ffi-trace"]