[package]
name = "didresolver"
version = "2.2.0"
edition = "2021"
description = "DID resolver for various did:tdw and did:webvh methods"
authors = ["Vladica Stojic", "Marcel Pfeuti", "Frithjof Hoppe", "Jonas Niestroj"]
homepage = "https://github.com/swiyu-admin-ch"
repository = "https://github.com/swiyu-admin-ch/didresolver"
readme = "README.md"
include = [
    "Cargo.toml",
    "README.md",
    "src/**/*",
]
license = "MIT"
#license-file = "LICENSE.md"
keywords = ["did", "tdw", "webvh"]
categories = ["cryptography", "development-tools::ffi", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "2.0.17"
uniffi = { version = "0.29.4", features = ["cli"] }
strum = { version = "0.27.2", features = ["derive"] }
# CAUTION Starting with 2.2.0, didtoolbox (as dep) is replaced by: did_tdw, did_sidekicks and did_webvh
did_tdw = { git = "https://github.com/swiyu-admin-ch/did-tdw.git", tag = "1.0.0" }
#did_tdw = { path = "../did-tdw" }
did_sidekicks = { git = "https://github.com/swiyu-admin-ch/did-sidekicks.git", tag = "1.0.0" }
#did_sidekicks = { path = "../did-sidekicks" }
did_webvh = { git = "https://github.com/swiyu-admin-ch/did-webvh.git", tag = "1.0.0" }
#did_webvh = { path = "../did-webvh" }

[build-dependencies]
uniffi = { version = "0.29.4", features = ["build"] }

[dev-dependencies]
uniffi = { version = "0.29.4", features = ["bindgen-tests"] }
rstest = "0.26.1"
ureq = "3.0.12"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]
name = "didresolver"

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[[bin]]
name = "uniffi-bindgen-swift"
path = "uniffi-bindgen-swift.rs"

[features]
ffi-trace = ["uniffi/ffi-trace"]

[lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# TODO pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
blanket_clippy_restriction_lints = "allow"
question_mark_used = "allow"
absolute_paths = "allow"
min_ident_chars = "allow"
module_name_repetitions = "allow"
arbitrary_source_item_ordering = "allow"
missing_docs_in_private_items = "allow"
# The following "linting rule relaxations" were predominantly added due to warnings originated in the code generated by UniFFI
implicit_return = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
exhaustive_structs = "allow"
missing_const_for_fn = "allow"