[workspace]
members = ["did", "did_sidekicks", "did_tdw", "did_webvh"]
resolver = "3"

[workspace.package]
#name = "didresolver"
version = "2.4.0"
edition = "2021"
description = "DID resolver for DID methods did:tdw and did:webvh"
authors = ["Vladica Stojic", "Marcel Pfeuti", "Frithjof Hoppe", "Jonas Niestroj"]
homepage = "https://github.com/swiyu-admin-ch"
repository = "https://github.com/swiyu-admin-ch/didresolver"
readme = "README.md"
#include = [
#    "Cargo.toml",
#    "README.md",
#]
license = "MIT"
#license-file = "LICENSE.md"
keywords = ["did"]
categories = ["cryptography", "development-tools::ffi", "external-ffi-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
uniffi = { version = "0.29.5", features = ["cli"] }
strum = { version = "0.27.2", features = ["derive"] }
thiserror = "2.0.17"
rstest = "0.26.1"
criterion = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
chrono = { version = "0.4.42", features = ["serde"] }
rand = "0.8.5"
regex = "1.12.2"
url-escape = "0.1.1"
url = "2.5.7"
rust-embed = { version = "8.9.0" , features = ["include-exclude", "compression"]}
rayon = "1.11.0"

[workspace.lints.clippy]
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# TODO pedantic = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
arbitrary_source_item_ordering = "allow"
blanket_clippy_restriction_lints = "allow"
question_mark_used = "allow"
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
redundant_test_prefix = "allow"
self_named_module_files = "allow"
# Due to rust_embed::Embed
same_name_method = "allow"
# The following "linting rule relaxations" were predominantly added due to warnings originated in the code generated by UniFFI
# However, always ensure the rest of code is not affected
absolute_paths = "allow"
implicit_return = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
exhaustive_structs = "allow"
missing_const_for_fn = "allow"
decimal_literal_representation = "allow"

[workspace.lints.rust]
# The following "linting rule relaxations" were predominantly added due to warnings originated in the code generated by UniFFI
# However, ensure the rest of code is not affected
deprecated = "allow"
